upravy v obchode a ine

--- a/en/obchod.html
+++ b/en/obchod.html
@@ -5,76 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="../simple-grid.min.css">
         <link rel="stylesheet" href="../style.css?v=47">
-        <link rel="stylesheet" href="../mobile-styles.css?v=2">
         <script type="text/javascript" src="../script.js?v=11"></script>
         <script type="text/javascript" src="../menu.js?v=1"></script>
         <script type="text/javascript" src="../qrcode.min.js"></script>
         <script>
-            // Wait for the page to load completely
-            document.addEventListener('DOMContentLoaded', function() {
-                // QR code 1 - Bank payment (SPD format for Czech banks)
-                const payment1 = "SPD*1.0*ACC:CZ6508000000001234567890*AM:5000.00*CC:CZK*MSG:Obraz Sunset*X-VS:001";
-                new QRCode(document.getElementById("qr1"), {
-                    text: payment1,
-                    width: 180,
-                    height: 180,
-                    colorDark: "#333333",
-                    colorLight: "#ffffff"
-                });
-
-                // QR code 2
-                const payment2 = "SPD*1.0*ACC:CZ6508000000001234567890*AM:7500.00*CC:CZK*MSG:Obraz Ocean*X-VS:002";
-                new QRCode(document.getElementById("qr2"), {
-                    text: payment2,
-                    width: 180,
-                    height: 180,
-                    colorDark: "#333333",
-                    colorLight: "#ffffff"
-                });
-
-                // QR code 3
-                const payment3 = "SPD*1.0*ACC:CZ6508000000001234567890*AM:6000.00*CC:CZK*MSG:Obraz Abstract*X-VS:003";
-                new QRCode(document.getElementById("qr3"), {
-                    text: payment3,
-                    width: 180,
-                    height: 180,
-                    colorDark: "#333333",
-                    colorLight: "#ffffff"
-                });
-
-                // QR code 4
-                const payment4 = "SPD*1.0*ACC:CZ6508000000001234567890*AM:5000.00*CC:CZK*MSG:Obraz Sunset 2*X-VS:004";
-                var qr4El = document.getElementById("qr4");
-                if (qr4El) new QRCode(qr4El, {
-                    text: payment4,
-                    width: 180,
-                    height: 180,
-                    colorDark: "#333333",
-                    colorLight: "#ffffff"
-                });
-
-                // QR code 5
-                const payment5 = "SPD*1.0*ACC:CZ6508000000001234567890*AM:7500.00*CC:CZK*MSG:Obraz Ocean 2*X-VS:005";
-                var qr5El = document.getElementById("qr5");
-                if (qr5El) new QRCode(qr5El, {
-                    text: payment5,
-                    width: 180,
-                    height: 180,
-                    colorDark: "#333333",
-                    colorLight: "#ffffff"
-                });
-
-                // QR code 6
-                const payment6 = "SPD*1.0*ACC:CZ6508000000001234567890*AM:6000.00*CC:CZK*MSG:Obraz Abstract 2*X-VS:006";
-                var qr6El = document.getElementById("qr6");
-                if (qr6El) new QRCode(qr6El, {
-                    text: payment6,
-                    width: 180,
-                    height: 180,
-                    colorDark: "#333333",
-                    colorLight: "#ffffff"
-                });
-            });
+            // QR kód se nyní generuje dynamicky v obchod.js
         </script>
 
     </head>
@@ -117,142 +52,144 @@
             </div>
 
 
+            <div class="obchod-styling">
+                <h2>SHOP</h2>
+            </div>
 
-
-            <div class="container exhibition">
-                <div class="row">
-                    <div class="col-12">
-                        <h2>SHOP</h2>
-                    </div>
-
-                    <div class="jak-to-funguje">
-                        <h2>✨ How it works?</h2>
-                        <div class="kroky">
-                            <div class="krok">
-                                <div class="cislo">1</div>
-                                <h3>Choose your artwork</h3>
-                                <p>Browse the gallery and find the artwork you love</p>
-                            </div>
-                            <div class="krok">
-                                <div class="cislo">2</div>
-                                <h3>Scan QR code</h3>
-                                <p>Your banking app will open automatically with pre-filled payment. Just confirm.</p>
-                            </div>
-                            <div class="krok">
-                                <div class="cislo">3</div>
-                                <h3>Send email</h3>
-                                <p>After payment, write to <strong>petra@zvukstetce.cz</strong> with your delivery address</p>
-                            </div>
-                            <div class="krok">
-                                <div class="cislo">4</div>
-                                <h3>Delivery within 3 days</h3>
-                                <p>I'll securely pack the artwork and send it by courier directly to your home 📦</p>
-                            </div>
+                <div class="container exhibition">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2>SHOP</h2>
                         </div>
-                        <div class="zaruka">
-                            <strong>💯 Guarantee:</strong> If you don't like the artwork, return it within 14 days and get your money back!
-                        </div>
-                    </div>
 
-                <div class="row">
-
-                    <div class="galerie">
-                        <!-- Artwork 1 -->
-                        <div class="obraz">
-                            <div class="obraz-nahled">
-                                <img loading="lazy" src="../obchod/6f39ecd3-d386-473d-8e6c-34136b383979.jpg" alt="Sunset Over Mountains">
+                        <div class="jak-to-funguje">
+                            <h2>✨ How it works?</h2>
+                            <div class="kroky">
+                                <div class="krok">
+                                    <div class="cislo">1</div>
+                                    <h3>Choose your artwork</h3>
+                                    <p>Browse the gallery and find the artwork you love</p>
+                                </div>
+                                <div class="krok">
+                                    <div class="cislo">2</div>
+                                    <h3>Scan QR code</h3>
+                                    <p>Your banking app will open automatically with pre-filled payment. Just confirm.</p>
+                                </div>
+                                <div class="krok">
+                                    <div class="cislo">3</div>
+                                    <p>After payment, write to <strong>petra@zvukstetce.cz</strong> with your delivery address</p>
+                                </div>
+                                <div class="krok">
+                                    <div class="cislo">4</div>
+                                    <h3>Delivery within 3 days</h3>
+                                    <p>I'll securely pack the artwork and send it by courier directly to your home 📦</p>
+                                </div>
                             </div>
-                            <h3>Sunset Over Mountains</h3>
-                            <div class="cena">5,000 CZK</div>
-                            <div id="qr4" class="qr-container"></div>
-                            <p class="instrukce">scan QR code for payment</p>
-                            <div class="platebni-info">
-                                <strong>Bank Payment:</strong><br>
-                                Account: 123456789/0800<br>
-                                VS: 001
+                            <div class="zaruka">
+                                <strong>💯 Guarantee:</strong> If you don't like the artwork, return it within 14 days and get your money back!
                             </div>
                         </div>
 
-                        <!-- Artwork 2 -->
-                        <div class="obraz">
-                            <div class="obraz-nahled">
-                                <img loading="lazy" src="../obchod/cb600632-45ed-4ab1-9961-377612953176.jpg" alt="Ocean Waves">
-                            </div>
-                            <h3>Ocean Waves</h3>
-                            <div class="cena">7,500 CZK</div>
-                            <div id="qr5" class="qr-container"></div>
-                            <p class="instrukce">scan QR code for payment</p>
-                            <div class="platebni-info">
-                                <strong>Bank Payment:</strong><br>
-                                Account: 123456789/0800<br>
-                                VS: 002
-                            </div>
-                        </div>
+                    <div class="row">
 
-                        <!-- Artwork 3 -->
-                        <div class="obraz">
-                            <div class="obraz-nahled">
-                                <img loading="lazy" src="../obchod/8c90274f-bdb0-4036-9216-c25457cbce3f.jpg" alt="Abstract Dreams">
+                        <div class="galerie">
+                            <!-- Artwork 1 -->
+                            <div class="obraz">
+                                <div class="obraz-nahled">
+                                    <img loading="lazy" src="../obchod/6f39ecd3-d386-473d-8e6c-34136b383979.jpg" alt="Sunset Over Mountains">
+                                </div>
+                                <h3>Sunset Over Mountains</h3>
+                                <div class="cena">5,000 CZK</div>
+                                <div id="qr4" class="qr-container"></div>
+                                <p class="instrukce">scan QR code for payment</p>
+                                <div class="platebni-info">
+                                    <strong>Bank Payment:</strong><br>
+                                    Account: 123456789/0800<br>
+                                    VS: 001
+                                </div>
                             </div>
-                            <h3>Abstract Dreams</h3>
-                            <div class="cena">6,000 CZK</div>
-                            <div id="qr6" class="qr-container"></div>
-                            <p class="instrukce">scan QR code for payment</p>
-                            <div class="platebni-info">
-                                <strong>Bank Payment:</strong><br>
-                                Account: 123456789/0800<br>
-                                VS: 003
-                            </div>
-                        </div>
-                        <!-- Artwork 4 -->
-                        <div class="obraz">
-                            <div class="obraz-nahled">
-                                <img loading="lazy" src="../obchod/8233bc90-689b-402a-812f-a83be669f785.jpg" alt="Sunset Over Mountains">
-                            </div>
-                            <h3>Sunset Over Mountains</h3>
-                            <div class="cena">5,000 CZK</div>
-                            <div id="qr1" class="qr-container"></div>
-                            <p class="instrukce">scan QR code for payment</p>
-                            <div class="platebni-info">
-                                <strong>Bank Payment:</strong><br>
-                                Account: 123456789/0800<br>
-                                VS: 001
-                            </div>
-                        </div>
 
-                        <!-- Artwork 5 -->
-                        <div class="obraz">
-                            <div class="obraz-nahled">
-                                <img loading="lazy" src="../obchod/59f9cbd6-13d4-45ac-af20-38476dd49c70.jpg" alt="Ocean Waves">
+                            <!-- Artwork 2 -->
+                            <div class="obraz">
+                                <div class="obraz-nahled">
+                                    <img loading="lazy" src="../obchod/cb600632-45ed-4ab1-9961-377612953176.jpg" alt="Ocean Waves">
+                                </div>
+                                <h3>Ocean Waves</h3>
+                                <div class="cena">7,500 CZK</div>
+                                <div id="qr5" class="qr-container"></div>
+                                <p class="instrukce">scan QR code for payment</p>
+                                <div class="platebni-info">
+                                    <strong>Bank Payment:</strong><br>
+                                    Account: 123456789/0800<br>
+                                    VS: 002
+                                </div>
                             </div>
-                            <h3>Ocean Waves</h3>
-                            <div class="cena">7,500 CZK</div>
-                            <div id="qr2" class="qr-container"></div>
-                            <p class="instrukce">scan QR code for payment</p>
-                            <div class="platebni-info">
-                                <strong>Bank Payment:</strong><br>
-                                Account: 123456789/0800<br>
-                                VS: 002
+
+                            <!-- Artwork 3 -->
+                            <div class="obraz">
+                                <div class="obraz-nahled">
+                                    <img loading="lazy" src="../obchod/8c90274f-bdb0-4036-9216-c25457cbce3f.jpg" alt="Abstract Dreams">
+                                </div>
+                                <h3>Abstract Dreams</h3>
+                                <div class="cena">6,000 CZK</div>
+                                <div id="qr6" class="qr-container"></div>
+                                <p class="instrukce">scan QR code for payment</p>
+                                <div class="platebni-info">
+                                    <strong>Bank Payment:</strong><br>
+                                    Account: 123456789/0800<br>
+                                    VS: 003
+                                </div>
                             </div>
+                            <!-- Artwork 4 -->
+                            <div class="obraz">
+                                <div class="obraz-nahled">
+                                    <img loading="lazy" src="../obchod/8233bc90-689b-402a-812f-a83be669f785.jpg" alt="Sunset Over Mountains">
+                                </div>
+                                <h3>Sunset Over Mountains</h3>
+                                <div class="cena">5,000 CZK</div>
+                                <div id="qr1" class="qr-container"></div>
+                                <p class="instrukce">scan QR code for payment</p>
+                                <div class="platebni-info">
+                                    <strong>Bank Payment:</strong><br>
+                                    Account: 123456789/0800<br>
+                                    VS: 001
+                                </div>
+                            </div>
+
+                            <!-- Artwork 5 -->
+                            <div class="obraz">
+                                <div class="obraz-nahled">
+                                    <img loading="lazy" src="../obchod/59f9cbd6-13d4-45ac-af20-38476dd49c70.jpg" alt="Ocean Waves">
+                                </div>
+                                <h3>Ocean Waves</h3>
+                                <div class="cena">7,500 CZK</div>
+                                <div id="qr2" class="qr-container"></div>
+                                <p class="instrukce">scan QR code for payment</p>
+                                <div class="platebni-info">
+                                    <strong>Bank Payment:</strong><br>
+                                    Account: 123456789/0800<br>
+                                    VS: 002
+                                </div>
+                            </div>
+
+                            <!-- Artwork 6 -->
+                            <div class="obraz">
+                                <div class="obraz-nahled">
+                                    <img loading="lazy" src="../obchod/1976dad2-9822-4a8f-b80f-7d26cea62566.jpg" alt="Abstract Dreams">
+                                </div>
+                                <h3>Abstract Dreams</h3>
+                                <div class="cena">6,000 CZK</div>
+                                <div id="qr3" class="qr-container"></div>
+                                <p class="instrukce">scan QR code for payment</p>
+                                <div class="platebni-info">
+                                    <strong>Bank Payment:</strong><br>
+                                    Account: 123456789/0800<br>
+                                    VS: 003
+                                </div>
+                            </div>
+
+
                         </div>
-
-                        <!-- Artwork 6 -->
-                        <div class="obraz">
-                            <div class="obraz-nahled">
-                                <img loading="lazy" src="../obchod/1976dad2-9822-4a8f-b80f-7d26cea62566.jpg" alt="Abstract Dreams">
-                            </div>
-                            <h3>Abstract Dreams</h3>
-                            <div class="cena">6,000 CZK</div>
-                            <div id="qr3" class="qr-container"></div>
-                            <p class="instrukce">scan QR code for payment</p>
-                            <div class="platebni-info">
-                                <strong>Bank Payment:</strong><br>
-                                Account: 123456789/0800<br>
-                                VS: 003
-                            </div>
-                        </div>
-
-
                     </div>
                 </div>
             </div>
