--- a/en/skola.html
+++ b/en/skola.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="../simple-grid.min.css" />
     <link rel="stylesheet" href="../style.css?v=47" />
-    <link rel="stylesheet" href="../mobile-styles.css?v=2" />
     <script type="text/javascript" src="../script.js?v=11"></script>
     <script type="text/javascript" src="../menu.js?v=1"></script>
+    <script type="text/javascript" src="../video-player.js"></script>
   </head>
   <body>
     <div id="menu-root"></div>
@@ -71,6 +71,41 @@
                 alt="Iroha School - calligraphy"
               />
             </figure>
+          </div>
+        </div>
+      </div>
+
+
+        <div class="container video-section">
+          <div class="row">
+            <div class="col-12">
+              <div class="video-container">
+                <video
+                  src="../newImages/VID-20220609-WA0019.mp4"
+                  poster="../newImages/IMG-20240619-WA0027.jpg"
+                  preload="none"
+                ></video>
+                <div class="play-button"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <p>
+              Every year I organize a meeting of school students on the 
+              <i><b> Calligraphy Roof</b></i> in Malá Strana, 
+              where joint writing is done. 
+            </p> 
+          </div> 
+          <div class="col-6"> 
+          <p> 
+              As part of the school, I also organize trips to Japan, where students 
+              they attend traditional Japanese calligraphy schools and meet with Japanese masters.
+          </p>
           </div>
         </div>
       </div>
