--- a/en/vystavy.html
+++ b/en/vystavy.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="../simple-grid.min.css" />
     <link rel="stylesheet" href="../style.css?v=47" />
-    <link rel="stylesheet" href="../mobile-styles.css?v=2" />
     <script type="text/javascript" src="../script.js?v=11"></script>
     <script type="text/javascript" src="../menu.js?v=1"></script>
   </head>
@@ -144,14 +143,14 @@
           </div>
         </div>
       </div>
-       <div class="col-6 kontakt m-p-g " >
+       <div class="vystavy" >
             <img src="../img/vystava2025_01.jpg" alt="poster exhibition Zvuk štetce, 2025" />
             <img src="../img/vystava2025_02.jpg" alt="poster exhibition Brána Ticha, 2025" />
             <img src="../img/vystava2024_01.jpg" alt="poster exhibition Duše slov, 2024" />
             <img src="../img/vystava2024_02.jpg" alt="poster exhibition Budó, 2024" />
             <img src="../img/vystava2023_01.jpg" alt="poster exhibition Tottori, 2023" />
       </div>
-      <div class="col-6 kontakt m-p-g "  >
+      <div class="vystavy"  >
             <img src="../img/vystava2023_02.jpg" alt="poster exhibition Miyabi, 2023" />
             <img src="../img/vystava2023_03.jpg" alt="poster exhibition Kjogen, 2023" />
             <img src="../img/vystava2022_01.jpg" alt="poster exhibition Sendžimon, 2022" />
