--- a/vystavy.html
+++ b/vystavy.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="simple-grid.min.css" />
     <link rel="stylesheet" href="style.css?v=47" />
-    <link rel="stylesheet" href="mobile-styles.css?v=2" />
     <script type="text/javascript" src="script.js?v=11"></script>
     <script type="text/javascript" src="menu.js?v=1"></script>
+  
   </head>
   <body>
     <div id="menu-root"></div>
@@ -146,14 +146,15 @@
       </div>
 
 
-      <div class="col-6 kontakt m-p-g " >
+      
+      <div class="vystavy" >
             <img src="img/vystava2025_01.jpg" alt="plakát výstava Zvuk štetce, 2025" />
             <img src="img/vystava2025_02.jpg" alt="plakát výstava Brána Ticha, 2025" />
             <img src="img/vystava2024_01.jpg" alt="plakát výstava Duše slov, 2024" />
             <img src="img/vystava2024_02.jpg" alt="plakát výstava Budó, 2024" />
             <img src="img/vystava2023_01.jpg" alt="plakát výstava Tottori, 2023" />
       </div>
-      <div class="col-6 kontakt m-p-g "  >
+      <div class="vystavy"  >
             <img src="img/vystava2023_02.jpg" alt="plakát výstava Miyabi, 2023" />
             <img src="img/vystava2023_03.jpg" alt="plakát výstava Kjogen, 2023" />
             <img src="img/vystava2022_01.jpg" alt="plakát výstava Sendžimon, 2022" />
@@ -183,7 +184,8 @@
 
     <div id="footer-root">
     </div>
-    <script type="text/javascript" src="footer.js?v=1"></script>
+  <script type="text/javascript" src="vystavy-viewer.js?v=1"></script>
+  <script type="text/javascript" src="footer.js?v=1"></script>
 
   </body>
 </html>
