--- a/galerie.html
+++ b/galerie.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" type="text/css" href="simple-grid.min.css" />
     <link rel="stylesheet" type="text/css" href="gallery.css" />
     <link rel="stylesheet" href="style.css?v=47" />
-    <link rel="stylesheet" href="mobile-styles.css?v=2" />
     <script type="text/javascript" src="photo-gallery.js"></script>
 
     <script type="text/javascript" src="gallery-data-manager.js"></script>
@@ -14,179 +13,113 @@
     <script type="text/javascript" src="menu.js?v=1"></script>
 
     <script>
+      // Gallery initialization is now handled by gallery-data-manager.js,
+      // but keyboard and swipe controls for fullscreen mode remain here.
       document.addEventListener("DOMContentLoaded", function () {
-        // Počkat na načtení obrázků přes gallery-data-manager
-        function initializeGallery() {
-          var galleries = Array.from(document.querySelectorAll(".m-p-g"));
-          if (galleries.length) {
-            galleries.forEach(function (elem) {
-              // Zkontrolovat, zda jsou obrázky načtené a mají správné rozměry
-              var thumbsBox = elem.querySelector(".m-p-g__thumbs");
-              var images = thumbsBox ? thumbsBox.querySelectorAll("img") : [];
-
-              // Zkontrolovat, zda mají obrázky načtené rozměry
-              // offsetWidth/Height může být 0 i když je obrázek načtený kvůli opacity: 0
-              var validImages = Array.from(images).filter(function (img) {
-                return (
-                  img.complete &&
-                  img.naturalWidth > 0 &&
-                  img.naturalHeight > 0 &&
-                  (img.offsetWidth > 0 || img.getAttribute('data-width')) &&
-                  (img.offsetHeight > 0 || img.getAttribute('data-height'))
-                );
-              });
-
-              if (validImages.length > 5) {
-                // Počkat na více obrázků
-
-                try {
-                  // Počkat ještě déle, aby se obrázky správně vykreslily
-                  setTimeout(function () {
-                    try {
-                      // Zkontrolovat, zda galerie stále existuje
-                      if (
-                        elem &&
-                        elem.parentNode &&
-                        !elem.dataset.initialized
-                      ) {
-                        new MaterialPhotoGallery(elem);
-                        elem.dataset.initialized = "true";
-
-                      }
-                    } catch (initError) {
-                    }
-                  }, 1000); // Zvýšeno na 1 sekundu
-                } catch (error) {
-                  // Zkusit znovu za 2 sekundy
-                  setTimeout(function () {
-                    try {
-                      if (
-                        elem &&
-                        elem.parentNode &&
-                        !elem.dataset.initialized
-                      ) {
-                        new MaterialPhotoGallery(elem);
-                        elem.dataset.initialized = "true";
-                      }
-                    } catch (retryError) {
-
-                    }
-                  }, 2000);
-                }
-              } else {
-                setTimeout(initializeGallery, 2000);
+        // Ovládání klávesnicí (pro aktivní galerii)
+        document.addEventListener("keydown", function (e) {
+          var fullscreenActive = document.querySelector(
+            ".m-p-g__fullscreen.active"
+          );
+          if (fullscreenActive) {
+            var activeGallery = fullscreenActive.closest(".m-p-g");
+            // ESC - zavřít galerii
+            if (e.key === "Escape" || e.keyCode === 27) {
+              var closeBtn =
+                activeGallery &&
+                activeGallery.querySelector(".m-p-g__controls-close");
+              if (closeBtn) {
+                closeBtn.click();
               }
-            });
+            }
+            // Šipka vlevo - předchozí fotka
+            if (e.key === "ArrowLeft" || e.keyCode === 37) {
+              var prevBtn =
+                activeGallery &&
+                activeGallery.querySelector(".m-p-g__controls-arrow--prev");
+              if (prevBtn) {
+                prevBtn.click();
+              }
+            }
+            // Šipka vpravo - další fotka
+            if (e.key === "ArrowRight" || e.keyCode === 39) {
+              var nextBtn =
+                activeGallery &&
+                activeGallery.querySelector(".m-p-g__controls-arrow--next");
+              if (nextBtn) {
+                nextBtn.click();
+              }
+            }
+          }
+        });
 
-            // Ovládání klávesnicí (pro aktivní galerii)
-            document.addEventListener("keydown", function (e) {
-              var fullscreenActive = document.querySelector(
-                ".m-p-g__fullscreen.active"
-              );
-              if (fullscreenActive) {
+        // Swipe funkce pro mobilní zařízení
+        var startX = 0;
+        var startY = 0;
+        var endX = 0;
+        var endY = 0;
+        var minSwipeDistance = 50;
+
+        document.addEventListener(
+          "touchstart",
+          function (e) {
+            var fullscreenActive = document.querySelector(
+              ".m-p-g__fullscreen.active"
+            );
+            if (fullscreenActive) {
+              startX = e.touches[0].clientX;
+              startY = e.touches[0].clientY;
+            }
+          },
+          false
+        );
+
+        document.addEventListener(
+          "touchend",
+          function (e) {
+            var fullscreenActive = document.querySelector(
+              ".m-p-g__fullscreen.active"
+            );
+            if (fullscreenActive) {
+              endX = e.changedTouches[0].clientX;
+              endY = e.changedTouches[0].clientY;
+
+              var deltaX = endX - startX;
+              var deltaY = endY - startY;
+
+              // Zkontrolovat, zda je swipe horizontální
+              if (
+                Math.abs(deltaX) > Math.abs(deltaY) &&
+                Math.abs(deltaX) > minSwipeDistance
+              ) {
                 var activeGallery = fullscreenActive.closest(".m-p-g");
-                // ESC - zavřít galerii
-                if (e.key === "Escape" || e.keyCode === 27) {
-                  var closeBtn =
-                    activeGallery &&
-                    activeGallery.querySelector(".m-p-g__controls-close");
-                  if (closeBtn) {
-                    closeBtn.click();
-                  }
-                }
-                // Šipka vlevo - předchozí fotka
-                if (e.key === "ArrowLeft" || e.keyCode === 37) {
+
+                if (deltaX > 0) {
+                  // Swipe vpravo - předchozí fotka
                   var prevBtn =
                     activeGallery &&
-                    activeGallery.querySelector(".m-p-g__controls-arrow--prev");
+                    activeGallery.querySelector(
+                      ".m-p-g__controls-arrow--prev"
+                    );
                   if (prevBtn) {
                     prevBtn.click();
                   }
-                }
-                // Šipka vpravo - další fotka
-                if (e.key === "ArrowRight" || e.keyCode === 39) {
+                } else {
+                  // Swipe vlevo - další fotka
                   var nextBtn =
                     activeGallery &&
-                    activeGallery.querySelector(".m-p-g__controls-arrow--next");
+                    activeGallery.querySelector(
+                      ".m-p-g__controls-arrow--next"
+                    );
                   if (nextBtn) {
                     nextBtn.click();
                   }
                 }
               }
-            });
-
-            // Swipe funkce pro mobilní zařízení
-            var startX = 0;
-            var startY = 0;
-            var endX = 0;
-            var endY = 0;
-            var minSwipeDistance = 50;
-
-            document.addEventListener(
-              "touchstart",
-              function (e) {
-                var fullscreenActive = document.querySelector(
-                  ".m-p-g__fullscreen.active"
-                );
-                if (fullscreenActive) {
-                  startX = e.touches[0].clientX;
-                  startY = e.touches[0].clientY;
-                }
-              },
-              false
-            );
-
-            document.addEventListener(
-              "touchend",
-              function (e) {
-                var fullscreenActive = document.querySelector(
-                  ".m-p-g__fullscreen.active"
-                );
-                if (fullscreenActive) {
-                  endX = e.changedTouches[0].clientX;
-                  endY = e.changedTouches[0].clientY;
-
-                  var deltaX = endX - startX;
-                  var deltaY = endY - startY;
-
-                  // Zkontrolovat, zda je swipe horizontální
-                  if (
-                    Math.abs(deltaX) > Math.abs(deltaY) &&
-                    Math.abs(deltaX) > minSwipeDistance
-                  ) {
-                    var activeGallery = fullscreenActive.closest(".m-p-g");
-
-                    if (deltaX > 0) {
-                      // Swipe vpravo - předchozí fotka
-                      var prevBtn =
-                        activeGallery &&
-                        activeGallery.querySelector(
-                          ".m-p-g__controls-arrow--prev"
-                        );
-                      if (prevBtn) {
-                        prevBtn.click();
-                      }
-                    } else {
-                      // Swipe vlevo - další fotka
-                      var nextBtn =
-                        activeGallery &&
-                        activeGallery.querySelector(
-                          ".m-p-g__controls-arrow--next"
-                        );
-                      if (nextBtn) {
-                        nextBtn.click();
-                      }
-                    }
-                  }
-                }
-              },
-              false
-            );
-          }
-        }
-
-        // Počkat déle, aby se načetly obrázky
-        setTimeout(initializeGallery, 3000); // Zvýšeno na 3 sekundy
+            }
+          },
+          false
+        );
       });
     </script>
   </head>
@@ -234,37 +167,11 @@
         <div
           class="m-p-g__thumbs"
           data-google-image-layout
-          data-max-height="320"
+          data-max-height="220"
         >
           <!-- Obrázky budou načteny dynamicky pomocí gallery-data-manager.js -->
         </div>
         <div class="m-p-g__fullscreen"></div>
-      </div>
-
-      <div class="container" style="margin-top: 0px">
-        <div class="row">
-          <div class="col-3">
-            <video
-              src="newImages/VID-20200605-WA0010.mp4"
-              controls
-              style="width: auto; height: 320px"
-            ></video>
-          </div>
-          <div class="col-3">
-            <video
-              src="newImages/VID-20200618-WA0029.mp4"
-              controls
-              style="width: auto; height: 320px"
-            ></video>
-          </div>
-          <div class="col-3">
-            <video
-              src="newImages/VID-20220609-WA0019.mp4"
-              controls
-              style="width: auto; height: 320px"
-            ></video>
-          </div>
-        </div>
       </div>
 
       <div class="container foot_foto">
