--- a/en/galerie.html
+++ b/en/galerie.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="../simple-grid.min.css" />
     <link rel="stylesheet" href="../style.css?v=47" />
     <link rel="stylesheet" href="../lightbox.css" />
-    
-    <script type="text/javascript" src="../gallery-data-manager.js"></script>
+
+    <script type="text/javascript" src="gallery-data-manager-en.js"></script>
     <script type="text/javascript" src="../script.js?v=12"></script>
     <script type="text/javascript" src="../menu.js?v=1"></script>
     <script>
